# VerbOS

./: .gitignore  LICENSE  README.md  electron-builder.json5  index.html  package-lock.json  package.json  tailwind.config.js  test-tools.js  vite.config.ts
backend/: pyproject.toml  server.py
backend/agent/: __init__.py  graph.py  sensitivity.py  state.py  supervisor.py
backend/agent/workers/: __init__.py  base_worker.py  code_worker.py  filesystem_worker.py  researcher_worker.py  system_worker.py
backend/tests/: test_sensitivity.py  test_tools.py
backend/tools/: file_tool.py  path_validation.py  shell_tool.py  system_tool.py
electron/: tsconfig.json
electron/main/: AgentService.ts  AgentServiceGraph.ts  PythonAPIClient.ts  PythonManager.ts  index.ts  logger.ts  storage.ts  utils.test.ts  utils.ts
electron/main/graph/: SQLiteCheckpointer.ts  VerbOSGraph.ts  index.ts  logger.ts  state.ts  supervisor.ts
electron/main/graph/__tests__/: SQLiteCheckpointer.test.ts  VerbOSGraph.test.ts  e2e.test.ts  integration.test.ts  logger.test.ts  state.test.ts  supervisor.test.ts  test-utils.ts  types.test.ts
electron/main/graph/workers/: BaseWorker.ts  CodeWorker.ts  FileSystemWorker.ts  ResearcherWorker.ts  SystemWorker.ts  index.ts
electron/main/graph/workers/__tests__/: BaseWorker.test.ts  CodeWorker.test.ts  (+7 more)
electron/main/tools/: FileTool.ts  ShellTool.ts  SystemTool.ts  pathValidation.ts
electron/preload/: index.ts
src/: App.tsx  index.css
src/components/: AgentTrace.tsx  ChatInterface.tsx  ErrorBoundary.tsx
src/types/: augos.d.ts  verbos.d.ts
